Improve SEO with structured data, meta tags, and sitemaps

--- a/_data/i18n/no.json
+++ b/_data/i18n/no.json
@@ -1,7 +1,7 @@
 {
   "site": {
     "title": "AI Safety Norway",
-    "description": "Arbeider for trygg og fordelaktig AI i Norge"
+    "description": "Norges ledende organisasjon innen sikker kunstig intelligens, risikoreduksjon og etisk AI-utvikling. Bli med i vårt forskningsnettverk for en trygg AI-fremtid."
   },
   "nav": {
     "about": "Om oss",
