--- a/_data/i18n/en.json
+++ b/_data/i18n/en.json
@@ -1,7 +1,7 @@
 {
   "site": {
     "title": "AI Safety Norway",
-    "description": "Working toward safe and beneficial AI in Norway"
+    "description": "Norway's leading organization dedicated to artificial intelligence safety, risk mitigation, and ethical AI development. Join our research network working toward beneficial AI."
   },
   "nav": {
     "about": "About",
