--- a/_data/i18n/en.json
+++ b/_data/i18n/en.json
@@ -42,8 +42,8 @@
   },
   "home": {
     "hero": {
-      "title": "Shaping the Future of AI Safety in Norway",
-      "description": "We bring together leading researchers, policymakers, and industry experts to ensure artificial intelligence is developed safely and benefits all of humanity. Join us in building a future where AI serves as a force for good.",
+      "title": "Because Artificial Intelligence is a Ticking Nuclear Bomb",
+      "description": "Leading AI researchers warn that we are racing toward a potential catastrophe. We bring together leading researchers, policymakers, and industry experts to ensure artificial intelligence is developed safely and benefits all of humanity. Join us in building a future where AI serves as a force for good.",
       "aboutButton": "Our Mission",
       "involvedButton": "Get Involved"
     },
