--- a/_data/i18n/no.json
+++ b/_data/i18n/no.json
@@ -42,7 +42,7 @@
   },
   "home": {
     "hero": {
-      "title": "Fordi Kunstig Intelligens er en Tikkende Atombombe",
+      "title": "Danner grunnlaget for KI-sikkerhet i Norge",
       "description": "Ledende KI-forskere advarer om at vi raser mot en potensiell katastrofe. Vi samler forskere, beslutningstakere og bransjeeksperter for å sikre at kunstig intelligens (KI) utvikles på en trygg måte og kommer menneskeheten til gode. Bli med i arbeidet for en fremtid der KI er en positiv kraft for samfunnet.",
       "aboutButton": "Vår misjon",
       "involvedButton": "Bli involvert"
