feat: comprehensive mobile responsiveness improvements - Fix mobile text overflow, optimize card layouts, and improve content readability across all screen sizes. Includes progressive container padding reduction, single-column mobile layouts, enhanced typography spacing, and Norwegian content updates.

--- a/_data/i18n/no.json
+++ b/_data/i18n/no.json
@@ -80,7 +80,7 @@
       ]
     },
     "quotes": {
-      "title": "Hva ledere sier om KI sikkerhet og kunstig intelligens",
+      "title": "Hva ledere sier om KI sikkerhet",
       "items": [
         {
           "content": "Utvikling av overmennskelig kunstig intelligens er sannsynligvis den største trusselen mot menneskehetens fortsatte eksistens.",
